java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testMakeClassAbstract1-hints.pass
Make class MakeClassAbstract1 abstract
